<?xml version="1.0"?>
<package>
	<name>playfile_writer</name>
	<version>0.0.0</version>
	<description>The playfile_writer package</description>
  
	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<maintainer email="wyatt@todo.todo">wyatt</maintainer>
	<maintainer email="tes77@case.edu">Tom</maintainer>

	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>


	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend>catkin_simple</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>davinci_interface</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>davinci_interface</run_depend>
	
	<export></export>
</package>
